Se finaliza el trabajo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   </head>
   <body>
     <header class="header">
@@ -35,22 +37,17 @@
         </div>
       </section>
       <section class="datos-personales-contenedor">
+        <h3 class="text-center">Datos Personales</h3>
         <div class="datos-personales contenedor">
-          <h3 class="text-center">Datos Personales</h3>
           <ul>
-            <li>Ocupación: Aventurera profesional, ama de casa</li>
-            <li>Ocupación: Aventurera profesional, ama de casa</li>
-            <li>
-              Situación legal: Antigua ciudadana de Transia, naturalizada
-              norteamericana, sin antecedentes penales
-            </li>
-            <li>Lugar de Nacimiento: Montaña Wundagore, Transia, Europa</li>
-            <li>Estado Civil: Casada</li>
-            <li>Base de Operaciones: Leonia, New Jersey</li>
-            <li>
-              Antiguos Grupos de Afiliación: Antiguo miembro de la Hermandad de
-              Mutantes Diabólicos, miembro reserva de los Vengadores
-            </li>
+            <li><i class="bi bi-person-workspace"></i>Ocupación: Aventurera profesional, ama de casa</li>
+            <li><i class="bi bi-person-lines-fill"></i>Situación legal: Antigua ciudadana de Transia, naturalizada
+              norteamericana, sin antecedentes penales</li>
+            <li><i class="bi bi-geo-alt-fill"></i>Lugar de Nacimiento: Montaña Wundagore, Transia, Europa</li>
+            <li><i class="bi bi-people-fill"></i>Estado Civil: Casada</li>
+            <li><i class="bi bi-building"></i>Base de Operaciones: Leonia, New Jersey</li>
+            <li><i class="bi bi-archive-fill"></i>Antiguos Grupos de Afiliación: Antiguo miembro de la Hermandad de
+              Mutantes Diabólicos, miembro reserva de los Vengadores</li>
           </ul>
         </div>
       </section>
@@ -58,15 +55,14 @@
         <div class="habilidades contenedor">
           <h3 class="text-center">Habilidades</h3>
           <ul>
-            <li>Proyección de energía</li>
-            <li>Telepatía</li>
-            <li>Manipulación de las probabilidades</li>
-            <li>Alteración y distorsión de la realidad</li>
-            <li>Telequinesis</li>
-            <li>Fragoquinesis</li>
-            <li>Esferas de energía</li>
-            <li>
-              Wanda ha estudiado ocultismo y misticismo con Agatha Harkness.
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Proyección de energía</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Telepatía</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Manipulación de las probabilidades</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Alteración y distorsión de la realidad</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Telequinesis</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Fragoquinesis</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Esferas de energía</li>
+            <li><i class="bi bi-arrow-right-circle-fill"></i>Wanda ha estudiado ocultismo y misticismo con Agatha Harkness.
             </li>
           </ul>
         </div>
@@ -75,21 +71,19 @@
         <div class="experiencia contenedor">
           <h3 class="text-center">Experiencia (Peliculas y otros medios)</h3>
           <ul>
-            <li>
-              Universo cinematográfico de Marvel: Captain America: The Winter
-              Soldier (2014)
-            </li>
-            <li>Avengers: Age of Ultron (2015)</li>
-            <li>Capitán América: Civil War (2016)</li>
-            <li>Avengers: Infinity War (2018)</li>
-            <li>Avengers: Endgame (2019)</li>
-            <li>Disney+, WandaVision (2021).</li>
-            <li>Doctor Strange en el Multiverso de la Locura (2022).</li>
-            <li>Disney+, WandaVision (2021).</li>
-            <li>películas animadas</li>
-            <li>juegos de arcade y de video</li>
-            <li>series de televisión</li>
-            <li>figuras de acción y cartas coleccionables</li>
+            <li><i class="bi bi-film"></i>Universo cinematográfico de Marvel: Captain America: The Winter
+              Soldier (2014)</li>
+            <li><i class="bi bi-film"></i>Avengers: Age of Ultron (2015)</li>
+            <li><i class="bi bi-film"></i>Capitán América: Civil War (2016)</li>
+            <li><i class="bi bi-film"></i>Avengers: Infinity War (2018)</li>
+            <li><i class="bi bi-film"></i>Avengers: Endgame (2019)</li>
+            <li><i class="bi bi-film"></i>Disney+, WandaVision (2021).</li>
+            <li><i class="bi bi-film"></i>Doctor Strange en el Multiverso de la Locura (2022).</li>
+            <li><i class="bi bi-film"></i>Disney+, WandaVision (2021).</li>
+            <li><i class="bi bi-film"></i>películas animadas</li>
+            <li><i class="bi bi-film"></i>juegos de arcade y de video</li>
+            <li><i class="bi bi-film"></i>series de televisión</li>
+            <li><i class="bi bi-film"></i>figuras de acción y cartas coleccionables</li>
           </ul>
         </div>
       </section>
