Se agrega hero banner

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header class="header">
       <h1 class="text-center">Wanda Maximoff Lehnsherr <span>(Bruja Escarlata)</span></h1>
     </header>
+    <div class="hero"></div>
     <main>
       <section class="contenedor">
         <h2 class="text-center titulo">Historia General</h2>
